# online_store_project

./: .env_sample  README.md  category.json  product.json  pyproject.toml  utils.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_img_preview.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: refill.py
catalog/migrations/: 0001_initial.py  0002_product.py  0003_category_manufactured_at.py  0004_remove_category_manufactured_at.py  0005_contact.py  0006_alter_category_id.py  0007_alter_product_created_at_alter_product_image_and_more.py  0007_blogpost_alter_product_created_at_and_more.py  0008_alter_product_category_alter_product_prod_desc.py  0008_alter_product_prod_desc.py  0009_alter_product_price.py  0010_alter_product_prod_desc.py  0011_version.py  0012_alter_version_is_current_alter_version_product_and_more.py  0013_alter_version_is_current.py  0014_alter_version_is_current.py  0015_product_owner.py  0016_alter_product_options_product_is_published.py
catalog/templates/: base.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
fixtures/: category.json  groups.json  product.json
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_verified_email_emailverification.py  0003_alter_user_phone.py  0004_alter_user_is_active.py
(+20 files in other folders)
