[tool.poetry]
name = "online-store-project"
version = "0.1.0"
description = ""
authors = ["Olga Aukhadieva <sarole4ka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
ipython = "^8.23.0"
pytils = "^0.4.1"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.3.0"}
redis = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
